image-cropper will now ensure minimum dimensions are always being met (#1623)
* image-cropper will now ensure minimum dimensions are always being met

* Set height = minHeight when height < minHeight in cropper

--- a/app/styles/components/image-cropper.less
+++ b/app/styles/components/image-cropper.less
@@ -19,4 +19,7 @@
       background-color: darken(@gray-light, 10%);
     }
   }
+  .js-Cropper-image {
+    max-width: 100%;
+  }
 }
